--- a/diet.html
+++ b/diet.html
@@ -65,7 +65,7 @@
 <body>
 
     <div class="h-m">
-        <a href="index.html">← MACROSYNC HOME</a>
+        <a href="analysis.html">← MACROSYNC ANALYSIS</a>
     </div>
 
     <div class="plan-container">
