--- a/analysis.html
+++ b/analysis.html
@@ -198,7 +198,7 @@
             <br>
             <p style="color: black;">chnvnvbnhg</p>
             <p>dfgshgfnfhn</p>
-            <a href="diet.html" class="cta-button">GENERATE DIET ANALYSIS</a>
+            <a href="diet.html" class="cta-button">DIET ANALYSIS</a>
         </div>
 
         <!-- Right Panel: Results Display -->
